--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,8 +1,8 @@
 root: ./
 
 structure:  
-    readme: README.md  
-    summary: SUMMARY.md​
+    readme: Readme.md  
+    summary: Summary.md
     
 redirects:  
     previous/page: new-folder/page.md
